--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -14,9 +14,11 @@
         </div>
         <div class="form-group text-right" style="margin-bottom: 8px;">
           <div class="pull-left" style="margin-top: 8px;">
-            <a :href="schemaPath" target="_blank" style="margin-right: 40px;">Schema</a>
-            <a :href="docsPath" target="_blank">Docs</a>
+            <%= link_to "Back", :back %>
+            <a :href="docsPath" target="_blank" style="margin-left: 20px;">Docs</a>
+            <a :href="schemaPath" target="_blank" style="margin-left: 20px;">Schema</a>
           </div>
+
           <%= f.select :data_source, Blazer.data_sources.values.select { |ds| q = @query.dup; q.data_source = ds.id; q.editable?(blazer_user) }.map { |ds| [ds.name, ds.id] }, {}, class: ("hide" if Blazer.data_sources.size <= 1), style: "width: 140px;" %>
           <div id="tables" style="display: inline-block; width: 250px; margin-right: 10px;">
             <select id="table_names" style="width: 240px;" placeholder="Preview table"></select>
