Replaced all the fixed widths so that the DOM does it's magic. Also replaced the underscores so that the titles will have line breaks and thus will be less wide

--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -119,9 +119,9 @@
               <tr>
                 <% @columns.each_with_index do |key, i| %>
                   <% type = @column_types[i] %>
-                  <th style="width: <%= header_width %>%;" data-sort="<%= type %>">
-                    <div style="min-width: <%= @min_width_types.include?(i) ? 180 : 60 %>px;">
-                      <%= key %>
+                  <th data-sort="<%= type %>">
+                    <div >
+                      <span><%= key.gsub('_', ' ').titleize %></span>
                     </div>
                   </th>
                 <% end %>
