--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -9,7 +9,7 @@
         <div class= "form-group">
           <%= f.hidden_field :statement %>
           <div id="editor-container">
-            <div id="editor" :style="{ height: editorHeight }"><%= @query.statement %></div>
+            <div id="editor" :style="{ height: editorHeight }" v-pre><%= @query.statement %></div>
           </div>
         </div>
         <div class="form-group text-right" style="margin-bottom: 8px;">
