--- a/app/views/blazer/queries/schema.html.erb
+++ b/app/views/blazer/queries/schema.html.erb
@@ -13,10 +13,7 @@
     <thead>
       <tr>
         <th colspan="2">
-          <%= table[:table] %>
-          <% if table[:schema] != "public" %>
-            <span class="text-muted" style="font-weight: normal;"><%= table[:schema] %></span>
-          <% end %>
+          <%= table[:label] || table[:table] %>
         </th>
       </tr>
     </thead>
