--- a/lib/generators/blazer/templates/install.rb.tt
+++ b/lib/generators/blazer/templates/install.rb.tt
@@ -20,6 +20,7 @@ class <%= migration_class_name %> < ActiveRecord::Migration<%= migration_version
     create_table :blazer_dashboards do |t|
       t.references :creator
       t.text :name
+      t.text :positions
       t.timestamps null: false
     end
 
