--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -20,7 +20,7 @@
         <% end %>
 
         <% if @query && params[:query_id] %>
-          <%= link_to "Refresh", refresh_query_path(@query, variable_params), method: :post %>
+          <%= link_to "Refresh", refresh_query_path(@query, variable_params(@query)), method: :post %>
         <% end %>
       </p>
     <% end %>
@@ -36,7 +36,7 @@
 
       <% if @query && @result.forecastable? && !params[:forecast] %>
         &middot;
-        <%= link_to "Forecast", query_path(@query, {forecast: "t"}.merge(variable_params)) %>
+        <%= link_to "Forecast", query_path(@query, {forecast: "t"}.merge(variable_params(@query))) %>
       <% end %>
     </p>
   <% end %>
