Renamed name to table

--- a/app/views/blazer/uploads/_form.html.erb
+++ b/app/views/blazer/uploads/_form.html.erb
@@ -4,8 +4,8 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :name %>
-    <%= f.text_field :name, class: "form-control" %>
+    <%= f.label :table %>
+    <%= f.text_field :table, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :file %>
