--- a/app/views/blazer/uploads/_form.html.erb
+++ b/app/views/blazer/uploads/_form.html.erb
@@ -1,6 +1,8 @@
 <%= form_for @upload, html: {class: "small-form"} do |f| %>
   <% if @upload.errors.any? %>
     <div class="alert alert-danger"><%= @upload.errors.full_messages.first %></div>
+  <% elsif !@upload.persisted? %>
+    <p>Create a database table from a CSV file. The table will be created in the <code><%= Blazer.settings["uploads"]["schema"] %></code> schema.</p>
   <% end %>
 
   <div class="form-group">
