--- a/app/views/blazer/uploads/_form.html.erb
+++ b/app/views/blazer/uploads/_form.html.erb
@@ -10,6 +10,10 @@
     <%= f.text_field :table, class: "form-control" %>
   </div>
   <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description, placeholder: "Optional", style: "height: 60px;", class: "form-control" %>
+  </div>
+  <div class="form-group">
     <%= f.label :file %>
     <%= f.file_field :file, class: "form-control" %>
   </div>
