Updated search text

--- a/app/views/blazer/uploads/index.html.erb
+++ b/app/views/blazer/uploads/index.html.erb
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-  <input id="search" type="text" placeholder="Start typing a query or state" style="width: 300px; display: inline-block;" class="search form-control" />
+  <input id="search" type="text" placeholder="Start typing a table or person" style="width: 300px; display: inline-block;" class="search form-control" />
 </div>
 
 <table id="uploads" class="table">
