--- a/app/views/blazer/uploads/_form.html.erb
+++ b/app/views/blazer/uploads/_form.html.erb
@@ -15,7 +15,7 @@
   </div>
   <div class="form-group">
     <%= f.label :file %>
-    <%= f.file_field :file, accept: "text/csv", class: "form-control" %>
+    <%= f.file_field :file, accept: "text/csv", style: "margin-top: 6px; margin-bottom: 6px;" %>
   </div>
   <p>
     <% if @upload.persisted? %>
