--- a/lib/generators/blazer/templates/install.rb.tt
+++ b/lib/generators/blazer/templates/install.rb.tt
@@ -6,6 +6,7 @@ class <%= migration_class_name %> < ActiveRecord::Migration<%= migration_version
       t.text :description
       t.text :statement
       t.string :data_source
+      t.string :status
       t.timestamps null: false
     end
 
