--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -14,8 +14,7 @@
         </div>
         <div class="form-group text-right" style="margin-bottom: 8px;">
           <div class="pull-left" style="margin-top: 8px;">
-            <%= link_to "Back", :back %>
-            <a :href="docsPath" target="_blank" style="margin-left: 40px;">Docs</a>
+            <a :href="docsPath" target="_blank">Docs</a>
             <a :href="schemaPath" target="_blank" style="margin-left: 40px;">Schema</a>
           </div>
 
