--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -17,6 +17,22 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <ul class="nav navbar-nav">
+          <li><%= link_to "Blazer", root_path, class: "navbar-brand" %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Create <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Query", new_query_path %></li>
+              <li><%= link_to "Dashboard", new_dashboard_path %></li>
+              <li><%= link_to "Check", new_check_path(query_id: @query.try(:id)) %></li>
+            </ul>
+          </li>
+          <li><%= link_to "Checks", checks_path %></li>
+        </ul>
+      </div>
+    </nav>
     <div class="container">
       <%= yield %>
     </div>
