No margin change

--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-default">
       <div class="container">
         <ul class="nav navbar-nav">
-          <li><%= link_to "Blazer", root_path, class: "navbar-brand" %></li>
+          <li><%= link_to "Blazer", root_path, class: "navbar-brand", style: "margin-left: 0;"  %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Create <span class="caret"></span></a>
             <ul class="dropdown-menu">
