--- a/app/views/blazer/queries/docs.html.erb
+++ b/app/views/blazer/queries/docs.html.erb
@@ -1,6 +1,6 @@
 <% blazer_title "Docs: #{@data_source.name}" %>
 
-<h1 style="line-height: 34px;">Docs: <%= @data_source.name %></h1>
+<h1>Docs: <%= @data_source.name %></h1>
 
 <hr />
 
