--- a/app/views/blazer/uploads/index.html.erb
+++ b/app/views/blazer/uploads/index.html.erb
@@ -10,6 +10,7 @@
       </button>
       <ul class="dropdown-menu">
         <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Checks", checks_path %></li>
         <li role="separator" class="divider"></li>
         <li><%= link_to "New Query", new_query_path %></li>
         <li><%= link_to "New Dashboard", new_dashboard_path %></li>
